[gd_scene load_steps=7 format=3 uid="uid://b1udg0j27o23v"]

[ext_resource type="Script" path="res://scenes/levels/death.gd" id="1_kjx1u"]

[sub_resource type="Animation" id="Animation_fu0vk"]
resource_name = "text_size_increase"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_ee8bv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6ewn"]
_data = {
"RESET": SubResource("Animation_ee8bv"),
"text_size_increase": SubResource("Animation_fu0vk")
}

[sub_resource type="InputEventAction" id="InputEventAction_vftr8"]
action = &"respawn"

[sub_resource type="Shortcut" id="Shortcut_talgf"]
events = [SubResource("InputEventAction_vftr8")]

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kjx1u")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.4, 0, 0, 1)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="Label" type="Label" parent="Node2D"]
offset_left = -75.0
offset_top = -21.0
offset_right = 75.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "YOU DIED!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n6ewn")
}

[node name="RespawnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 400.0
offset_right = 696.0
offset_bottom = 450.0
shortcut = SubResource("Shortcut_talgf")
text = "PRESS 'SPACE' TO RESPAWN"

[node name="ShowRespawnButtonTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="timeout" from="ShowRespawnButtonTimer" to="." method="_on_show_respawn_button_timer_timeout"]
